<resources>
    <string name="app_name">Git Kotlin Issues</string>
    <string name="error_server">Unfortunately the search has problems.</string>
    <string name="error_network">Problem in connecting to the data network.</string>
    <string name="error_unknown">Unfortunately the search has unknown issues.</string>
    <string name="label_issue_detail">Issues Detail</string>
    <string name="label_detail_issue_state">Issue state: %1$s</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="open_url_issue_github">Open Issue in Github</string>
    <string name="user_login">User login</string>
    <string name="issue_title">Issue title</string>
    <string name="created_at">Created at</string>
    <string name="issue_user_title">Issue user title</string>
    <string name="description_user_issue">Description user issue</string>
    <string name="data_issue_created">Data issue created</string>
</resources>
